// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuffTomlFile synthesizes ruff.toml with custom options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

cache-dir = ".cache/.ruff_cache"
show-fixes = true
src = [ "src", "tests" ]
target-version = "py310"
unsafe-fixes = true

[format]
docstring-code-format = true

[lint]
ignore = [ "E501" ]
select = [ "F401" ]

  [lint.mccabe]
  max-complexity = 10

  [lint.per-file-ignores]
  "src/*" = [ "E302" ]
"
`;

exports[`RuffTomlFile synthesizes ruff.toml with default options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

cache-dir = ".cache/.ruff_cache"
show-fixes = true
src = [ "src", "tests" ]
target-version = "py313"
unsafe-fixes = false

[format]
docstring-code-format = true

[lint]
ignore = [ ]
select = [ ]
per-file-ignores = { }

  [lint.mccabe]
  max-complexity = 14
"
`;
